# phantom-core-omega

./: README.md  benchmark_runner.py  deploy_guide.txt  generate_report.py  presentation.pptx  protocol_spec.md  technical_overview.md  user_manual.md
.github/workflows/: build.yml
android/demo_app/: settings.gradle
android/demo_app/app/: build.gradle
android/demo_app/app/src/main/: AndroidManifest.xml
android/demo_app/app/src/main/assets/shaders/: quad.frag  quad.vert  raytrace.comp
android/demo_app/app/src/main/java/com/phantom/demo/: CubeRenderer.kt  MainActivity.kt
android/demo_app/app/src/main/res/layout/: activity_main.xml
android/demo_app/app/src/main/res/values/: strings.xml
android/kernel_module/: Makefile  ebpf_program.c  load.sh
android/proxy_app/: build_log.txt  settings.gradle
android/proxy_app/app/: build.gradle
android/proxy_app/app/src/main/: AndroidManifest.xml
android/proxy_app/app/src/main/cpp/: CMakeLists.txt  proxy_native.cpp
android/proxy_app/app/src/main/java/com/phantom/core/: MainActivity.kt  ProxyService.kt
android/proxy_app/app/src/main/res/layout/: activity_main.xml
android/proxy_app/tflite_model/: train.py
pc_daemon/: Cargo.toml  README.md
pc_daemon/src/: benchmark.rs  fec.rs  jit.rs  main.rs  nack.rs  predictor.rs  protocol.rs  sandbox.rs
scripts/: deploy.ps1  deploy.sh  generate_presentation.py
