[package]
name = "phantom-core-daemon"
version = "1.0.0"
edition = "2021"
authors = ["PhantomCore Team"]
description = "Remote compute offloading daemon — ARM64-to-x86 JIT with speculative execution"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
byteorder = "1"
crossbeam = "0.8"
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
